--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,1 +1,10 @@
-<h1>Hello from index </h1>
+<%= link_to "Create a movie list", new_list_path, class: "btn btn-flat" %>
+<div class="row">
+  <% @lists.each do |list| %>
+    <div class="co-12 col-sm-6 col-md-4 mb-3">
+      <%= link_to list_path(list), class:"text-decoration-none" do %>
+        <%= list.name %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
